--- a/package.json
+++ b/package.json
@@ -4,28 +4,31 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "bson": "^5.5.0",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "ip": "^2.0.0",
     "kareem": "^2.5.1",
     "memory-pager": "^1.5.0",
     "mongodb": "^5.8.1",
     "mongodb-connection-string-url": "^2.6.0",
-    "mongoose": "^7.5.4",
+    "mongoose": "^7.6.0",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
+    "nodemon": "^3.0.1",
     "punycode": "^2.3.0",
     "sift": "^16.0.1",
     "smart-buffer": "^4.2.0",
     "socks": "^2.7.1",
     "sparse-bitfield": "^3.0.3",
     "tr46": "^3.0.0",
+    "validator": "^13.11.0",
     "webidl-conversions": "^7.0.0",
     "whatwg-url": "^11.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
