--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=4000
-DATABASE = mongodb+srv://ahmedlasheen2412:Newlife2023@cluster0.lq7synw.mongodb.net/
+DATABASE = mongodb+srv://ahmedlasheen2412:Newlife2023@cluster0.lq7synw.mongodb.net/pharmacy?retryWrites=true
