--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.6.0",
     "ip": "^2.0.0",
     "kareem": "^2.5.1",
     "memory-pager": "^1.5.0",
