--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/x-data-grid": "^6.16.2"
+    "@mui/x-data-grid": "^6.16.2",
+    "cors": "^2.8.5"
   }
 }
