adding telex font and fixing buttons places

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,2 +1,8 @@
 PORT = 4000
 MONGO_URI = 'mongodb+srv://ahmedlasheen2412:Newlife2023@cluster0.lq7synw.mongodb.net/clinic?retryWrites=true'
+NODE_ENV=development
+
+EMAIL_USERNAME=944d5b5ecc4a9d
+EMAIL_PASSWORD=04a3c2dd700e19
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
