--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.20.2",
     "bson": "^5.5.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
