--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,18 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "firebase": "^10.6.0",
     "mui": "^0.0.1",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "victory": "^36.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
