--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,17 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.6.0",
+    "jspdf": "^2.5.1",
     "mui": "^0.0.1",
     "next": "^13.5.4",
-    "firebase": "^10.6.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
