--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/x-data-grid": "^6.16.2",
     "@stripe/react-stripe-js": "^2.3.2",
     "@stripe/stripe-js": "^2.1.11",
+    "@stripe/stripe-react-native": "^0.35.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,10 +19,14 @@
     "mui": "^0.0.1",
     "next": "^13.5.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-native": "^0.73.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
