--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,15 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "bson": "^6.2.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "firebase": "^10.6.0",
     "mui": "^0.0.1",
     "next": "^13.5.4",
     "react": "^18.2.0",
-    "react-calendar": "^4.7.0",
-   
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
@@ -32,7 +32,11 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "realm-web": "^2.0.0",
+    "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
     "victory": "^36.7.0",
     "web-vitals": "^2.1.4"
   },
